2006-05-15  Sven Panne  <sven.panne@aedion.de>

	* admin/VisualStudio6/altest/altest.dsp,
	admin/VisualStudio6/contrib.dsw,
	admin/VisualStudio6/openal_info/openal_info.dsp,
	admin/VisualStudio6/panning2d/panning2d.dsp: Added support for building
	with Visual Studio 6. Currently only altest works, the rest of the
	workspace consists of skeletons only.

	* tests/altest/altest.c: Fixes for compilation with Visual Studio.

2006-05-12  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am: Removed "permission" target, it is not needed anymore.

	* Makefile.am: Update EXTRA_DIST.

	* configure.ac, examples/Makefile.am: Hook openal-info example into
	build system.

	* examples/openal-info/openal-info.c, examples/openal-info/Makefile.am:
	Added.

2006-05-11  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c(FA_EnumerationValue): Distinguish between ALC
	enums and AL enums.

	* tests/altest/altest.c: Reformatted automatically with GNU indent. In
	the future, please use "make indent" before commiting (if possible).

	* tests/altest/altest.c(SA_ListenerOrientation): Don't use the ambiguous
	"foo=-1".

	* tests/altest/altest.c: Hopefully improved header selection for Macs.

2006-05-10  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/Makefile.am: Added a "README" target for generating docs
	directly from the sources.

	* tests/altest/gendocs.py: Added.
	
	* tests/altest/altest.c: Fixed mini-typo in comment.
	
	* tests/altest/altest.c: Centralized #if for _kbhit().

	* tests/altest/altest.c(main,I_QueueTest,I_StereoTest): Remove #ifs for
	ancient OpenAL versions on Linux.

	* tests/altest/altest.c: Remove useless return statements.

	* tests/altest/altest.c: Make the Ogg Vorbis test dynamic.

	* tests/altest/altest.c: Moved filenames into #defines.

	* tests/altest/sounds/README: Added info about footadpcm.wav.

	* tests/altest/sounds/footadpcm.wav: Added.

	* tests/altest/sounds/README: Added.
